k8s/overlays/desktop/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: dnd-rulebook-llm
spec:
    type: LoadBalancer
