k8s/overlays/desktop/frontend-service.yaml
#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: dnd-rulebook-llm
spec:
    type: LoadBalancer
