k8s/overlays/desktop/gradio-service.yaml
#! gradio-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gradio-published
    namespace: dnd-rulebook-llm
spec:
    type: LoadBalancer
